# CopyOfSurfaceAlpha

./: .env.example  .gitignore  Makefile  models.txt.rtf  pyproject.toml  training.txt.rtf
configs/: backtest.yaml  data.yaml  default.yaml  model.yaml  symbols.yaml  training.yaml
reports/: v4_report.md
runs/pilot/outputs/: fold_0_summary.json  fold_1_summary.json  fold_2_summary.json  fold_3_summary.json  fold_4_summary.json  fold_5_summary.json  fold_6_summary.json  fold_7_summary.json
runs/pilot/outputs/backtest/: benchmark_summary.json  equity_curve.csv  position_history.csv  summary.json
runs/pilot/outputs/evaluation/: evaluation_report.json  per_fold_metrics.csv  per_regime_metrics.csv
runs/pilot/outputs/explain/: patch_importance.npy  regime_attribution.npy  regime_feature_means.csv  shap_importance.json  shap_values.npy  surface_heatmap.npy  top_features.json
scripts/: backtest.py  build_canonical.py  build_surface.py  diagnose.py  evaluate.py  explain.py  fetch_market_state.py  fetch_options.py  fetch_underlying.py  train.py
src/volregime/baselines/: __init__.py  boosting.py  deep_ts.py  garch.py  har_rv.py  persistence.py
src/volregime/data/: __init__.py  cleaning.py  dataset.py  dolt_client.py  dubach_client.py  feature_eng.py  market_state.py  surface_builder.py  symbol_map.py  targets.py  underlying.py  vol_history.py
src/volregime/evaluation/: __init__.py  economic_metrics.py  forecast_metrics.py  stat_tests.py
src/volregime/explain/: __init__.py  regime_importance.py  shap_tabular.py  vit_attribution.py
src/volregime/models/: __init__.py  context_encoder.py  full_model.py  fusion.py  output_heads.py  regime_moe.py  returns_encoder.py  surface_encoder.py
src/volregime/portfolio/: __init__.py  backtest_engine.py  overlay.py  regime_rules.py
src/volregime/training/: __init__.py  ensemble.py  losses.py  trainer.py  walk_forward.py
src/volregime/utils/: __init__.py  config.py  io.py  logging.py  reproductibility.py
